SFDC_Learning/src/objects/Production_Position__c.object
<CustomObject>
    <description>This object is created to store Positions related to Person associated to Production House.</description>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Production Positions</relationshipLabel>
        <relationshipName>Production_Positions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Positions_Set__c</fullName>
        <label>Positions Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actor</fullName>
                </value>
                <value>
                    <fullName>Cinematographer</fullName>
                </value>
                <value>
                    <fullName>Composer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Musician</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Sound Mixing</fullName>
                </value>
                <value>
                    <fullName>Writer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Production Positions</relationshipLabel>
        <relationshipName>Production_Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Production Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Production Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>